--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,75 @@ header img {
   color: #2200ff;
 }
 
+/*! main page  */
+
+.mainPage {
+  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 500px;
+  flex-direction: column;
+  gap: 50px;
+  background: linear-gradient(
+    90deg,
+    rgba(3, 0, 255, 1) 1%,
+    rgba(0, 255, 239, 1) 55%
+  );
+  border-radius: 20px;
+}
+
+.mainPage button {
+  padding: 30px 50px;
+  color: #0000ff;
+  background-color: #fff;
+  border: 5px solid #0000ff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/*! password page */
+
+.passPage {
+  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 500px;
+  flex-direction: column;
+  gap: 50px;
+  background: linear-gradient(
+    90deg,
+    rgba(3, 0, 255, 1) 1%,
+    rgba(0, 255, 239, 1) 55%
+  );
+  border-radius: 20px;
+}
+
+.passPage h1 {
+  font-size: 50px;
+  color: #fff;
+}
+.passPage input {
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  color: #0000ff;
+}
+
+.passPage button {
+  padding: 20px 30px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  color: #0000ff;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 /*! main-section  */
 
 .main-sec {
@@ -64,21 +133,23 @@ header img {
     rgba(3, 0, 255, 1) 1%,
     rgba(0, 255, 239, 1) 55%
   );
-  height: 500px;
+  height: 550px;
 }
 
 .main-sec h1 {
-  font-size: 80px;
+  font-size: 100px;
   color: #fff;
-  padding: 100px;
+  padding: 70px;
   padding-left: 100px;
+  width: 1000px;
 }
 
 .main-sec p {
   width: 900px;
   color: #fff;
-  margin-top: -90px;
+  margin-top: -60px;
   margin-left: 100px;
+  font-size: 30px;
 }
 .main-sec button {
   background-color: #00ffff;
@@ -189,12 +260,12 @@ h2 {
   flex-direction: column;
   width: 200px;
   gap: 10px;
-  cursor: pointer;
   padding: 5px;
   padding-bottom: 10px;
   border-radius: 10px;
   box-shadow: 0px 0px 18px -4px rgb(0, 110, 255);
   text-align: center;
+  cursor: pointer;
 }
 
 .all .card-img {
@@ -213,6 +284,32 @@ h2 {
 .all .card-description {
   font-size: 10px;
   color: grey;
+}
+.card-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  gap: 10px;
+}
+
+.card-btns button {
+  box-shadow: 0px 0px 9px 2px rgba(0, 51, 255, 0.21);
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+#editBtn {
+  color: #0000ff;
+  background-color: #00ffff;
+}
+
+#deleteBtn {
+  color: #ffffff;
+  background-color: #ff0099;
 }
 
 /*! footer */
