--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
 
 header {
   background-color: #fff;
+  position: fixed;
+  width: 100%;
 }
 
 header .container {
@@ -42,101 +44,102 @@ header img {
     90deg,
     rgba(0, 254, 255, 1) 10%,
     rgba(0, 5, 255, 1) 100%
-  );
-  border-radius: 10px;
-  outline: none;
-  padding: 20px 30px;
-  font-size: 18px;
-  box-shadow: -1px 2px 13px 0px rgba(43, 57, 44, 0.75);
-  color: #2200ff;
-}
-
-.search::placeholder {
-  font-size: 18px;
-  color: #2200ff;
-}
-
-/*! main page  */
-
-.mainPage {
-  margin: 100px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 500px;
-  height: 500px;
-  flex-direction: column;
-  gap: 50px;
-  background: linear-gradient(
-    90deg,
-    rgba(3, 0, 255, 1) 1%,
-    rgba(0, 255, 239, 1) 55%
-  );
-  border-radius: 20px;
-}
-
-.mainPage button {
-  padding: 30px 50px;
-  color: #0000ff;
-  background-color: #fff;
-  border: 5px solid #0000ff;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
-/*! password page */
-
-.passPage {
-  margin: 100px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 500px;
-  height: 500px;
-  flex-direction: column;
-  gap: 50px;
-  background: linear-gradient(
-    90deg,
-    rgba(3, 0, 255, 1) 1%,
-    rgba(0, 255, 239, 1) 55%
-  );
-  border-radius: 20px;
-}
-
-.passPage h1 {
-  font-size: 50px;
-  color: #fff;
-}
-.passPage input {
-  padding: 10px 20px;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  color: #0000ff;
-}
-
-.passPage button {
-  padding: 20px 30px;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  color: #0000ff;
-  font-size: 30px;
-  cursor: pointer;
-}
-
-/*! main-section  */
-
-.main-sec {
-  background: linear-gradient(
-    90deg,
-    rgba(3, 0, 255, 1) 1%,
-    rgba(0, 255, 239, 1) 55%
-  );
-  height: 550px;
-}
-
-.main-sec h1 {
+    );
+    border-radius: 10px;
+    outline: none;
+    padding: 20px 30px;
+    font-size: 18px;
+    box-shadow: -1px 2px 13px 0px rgba(43, 57, 44, 0.75);
+    color: #2200ff;
+  }
+  
+  .search::placeholder {
+    font-size: 18px;
+    color: #2200ff;
+  }
+  
+  /*! main page  */
+  
+  .mainPage {
+    margin: 100px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 500px;
+    flex-direction: column;
+    gap: 50px;
+    background: linear-gradient(
+      90deg,
+      rgba(3, 0, 255, 1) 1%,
+      rgba(0, 255, 239, 1) 55%
+      );
+      border-radius: 20px;
+    }
+    
+    .mainPage button {
+      padding: 30px 50px;
+      color: #0000ff;
+      background-color: #fff;
+      border: 5px solid #0000ff;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    
+    /*! password page */
+    
+    .passPage {
+      margin: 100px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 500px;
+      height: 500px;
+      flex-direction: column;
+      gap: 50px;
+      background: linear-gradient(
+        90deg,
+        rgba(3, 0, 255, 1) 1%,
+        rgba(0, 255, 239, 1) 55%
+        );
+        border-radius: 20px;
+      }
+      
+      .passPage h1 {
+        font-size: 50px;
+        color: #fff;
+      }
+      .passPage input {
+        padding: 10px 20px;
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        color: #0000ff;
+      }
+      
+      .passPage button {
+        padding: 20px 30px;
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        color: #0000ff;
+        font-size: 30px;
+        cursor: pointer;
+      }
+      
+      /*! main-section  */
+      
+      .main-sec {
+        background: linear-gradient(
+          90deg,
+          rgba(3, 0, 255, 1) 1%,
+          rgba(0, 255, 239, 1) 55%
+          );
+          height: 650px;
+          padding-top: 100px;
+        }
+        
+        .main-sec h1 {
   font-size: 100px;
   color: #fff;
   padding: 70px;
@@ -399,4 +402,51 @@ footer .footer-block {
 
 .join input::placeholder {
   color: #0000ff;
+}
+
+/*! profile  */
+
+.profile {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 70px;
+  background-color: #00ffff;
+  padding-bottom: 99px;
+}
+
+.profile img {
+  width: 250px;
+  height: 250px;
+  border: 10px solid #3300ff;
+  border-radius: 50%;
+}
+
+.profile h1 {
+  margin-top: 30px;
+  font-size: 40px;
+  letter-spacing: 5px;
+}
+
+.profile p {
+  width: 500px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.profile-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin-top: 50px;
+}
+.profile-block img {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
 }
