--- a/src/index.css
+++ b/src/index.css
@@ -400,3 +400,49 @@ footer .footer-block {
 .join input::placeholder {
   color: #0000ff;
 }
+
+/* ! profile */
+.profile {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 70px;
+  background-color: #00ffff;
+  padding-bottom: 99px;
+}
+
+.profile img {
+  width: 250px;
+  height: 250px;
+  border: 10px solid #3300ff;
+  border-radius: 50%;
+}
+
+.profile h1 {
+  margin-top: 30px;
+  font-size: 40px;
+  letter-spacing: 5px;
+}
+
+.profile p {
+  width: 500px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.profile-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin-top: 50px;
+}
+.profile-block img {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+} 
