--- a/src/index.css
+++ b/src/index.css
@@ -448,3 +448,187 @@ footer .footer-block {
   border-radius: 10px;
   border: none;
 }
+
+/*! modal  */
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000c1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 900px;
+  height: 500px;
+  position: relative;
+  animation: fadeIn 0.3s ease;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 24px;
+  color: #333;
+  background: none;
+  border: none;
+}
+
+/* Анимация */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.image-container {
+  float: left;
+  width: 40%;
+  height: 100%;
+  padding: 20px;
+}
+
+.detail-image {
+  max-width: 100%;
+  height: 450px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.detail-image:hover {
+  transform: scale(1.05);
+}
+
+.content-container {
+  float: right;
+  width: 60%;
+  height: 100%;
+  padding: 20px;
+  overflow-y: auto;
+  margin: 10px auto;
+}
+
+.detail-title {
+  font-size: 50px;
+  margin-left: 100px;
+  margin-top: -20px;
+}
+
+.detail-author {
+  font-size: 25px;
+  margin-bottom: 10px;
+  color: #777;
+}
+
+.detail-description {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.detail-stars {
+  height: 60px;
+  background-image: url("https://t4.ftcdn.net/jpg/05/51/01/61/360_F_551016167_Cl4yhQjQXJzKnHWcyKYB4Tswd9b3ftqa.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-bottom: 10px;
+}
+
+.h {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+.add {
+  margin-top: 110px;
+  padding: 10px 20px;
+  background-color: #0000ff;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.content-container button {
+  margin-right: 20px;
+  padding: 10px;
+  background-color: #0000ff;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+}
+
+#modal-button {
+  width: 100%;
+  height: 50px;
+  background-color: #00ffff;
+  color: #0000ff;
+  border: 1px solid #0000ff;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: background-color 0.3s ease;
+}
+
+.modal-button:hover {
+  background-color: #555;
+}
+
+/*! form add product  */
+
+.formAdd {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  text-align: center;
+}
+.formAdd h2 {
+  margin-left: -5px;
+}
+.formAdd input,
+.formAdd textarea {
+  padding: 7px 15px;
+  border: 2px solid #0000ff;
+  border-radius: 10px;
+  color: #0000ff;
+  background-color: #d8ffff;
+}
+.formAdd input::placeholder,
+.formAdd textarea::placeholder {
+  color: #0000ff;
+}
+.formAdd button {
+  padding: 10px 10px;
+  width: 240px;
+  border: 2px solid #0000ff;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #0000ff;
+}
+
+.view {
+  background-color: #0000ff;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 10px;
+}
